--- a/.gitignore
+++ b/.gitignore
@@ -19,14 +19,18 @@
 # misc
 .DS_Store
 *.pem
+.vscode
+**/*.cache
+**/*.egg-info
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# env files
 .env*.local
+.env
 
 # vercel
 .vercel
@@ -34,6 +38,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# environment
-.env
