--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.9.0",
     "framer-motion": "^6.3.0",
-    "next": "latest",
+    "next": "^14.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
