Use npm instead of pnpm
Despite pnpm being significantly faster, it's use of symlinks means that it doesn't play nicely with Docker. We will use npm for the time being.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,11 @@ jobs:
         with:
           node-version: '20.14.0'
 
-      - name: Install pnpm
-        run: npm install -g pnpm
-
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
 
       - name: Build project
-        run: pnpm run build
+        run: npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
