--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^6.3.0",
     "next": "^14.2.3",
     "react": "^18.2.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
