Add Prisma and create Prisma models

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3.9'
+version: "3.9"
 
 services:
   nextjs:
     build: .
     ports:
-      - '3000:3000'
+      - "3000:3000"
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_HOST=db
@@ -16,7 +16,7 @@ services:
   db:
     image: postgres:latest
     ports:
-      - '5432:5432'
+      - "5555:5432"
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
