--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@chakra-ui/theme-tools": "^2.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.9.0",
+    "@prisma/client": "^5.15.0",
     "framer-motion": "^6.3.0",
     "next": "^14.2.3",
+    "prisma": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
