--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run Next Lint
-        run: npm run lint
+      - name: Run Format
+        run: npm run format
