--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "prisma migrate dev",
+    "postmigrate": "npx @snaplet/seed sync"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.2",
@@ -12,9 +14,13 @@
     "@chakra-ui/theme-tools": "^2.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.9.0",
+    "@faker-js/faker": "^8.4.1",
     "@prisma/client": "^5.15.0",
+    "@snaplet/copycat": "^5.0.0",
+    "@snaplet/seed": "^0.97.20",
     "framer-motion": "^6.3.0",
     "next": "^14.2.3",
+    "postgres": "^3.4.4",
     "prisma": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -26,5 +32,11 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.2.3",
     "typescript": "^4.7.2"
+  },
+  "@snaplet/seed": {
+    "config": "prisma/seed/seed.config.ts"
+  },
+  "prisma": {
+    "seed": "npx tsx prisma/seed/seed.ts"
   }
 }
