--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     volumes:
       - .:/app
   db:
-    image: postgres:latest
+    image: postgres:16-alpine
     ports:
       - '5432:5432'
     environment:
