--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,24 +5,15 @@ services:
     build: .
     ports:
       - '3000:3000'
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_HOST=db
-      - POSTGRES_DATABASE=${POSTGRES_DATABASE}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_PORT=${POSTGRES_PORT}
     depends_on:
       - db
     volumes:
       - .:/app
+      - /app/node_modules
   db:
     image: postgres:16-alpine
     ports:
       - '5432:5432'
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DATABASE}
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
