--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -26,7 +22,7 @@
     "strictNullChecks": true,
     "paths": {
       // enables us to write `import X from "auth"` instead of `import X from "../../auth"`
-      "auth": ["./auth"], 
+      "auth": ["./auth"]
     }
   },
   "include": [
@@ -36,7 +32,5 @@
     "**/*.tsx",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
