Add Nodemailer email sending

--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,9 @@ AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
 AUTH_SECRET=
 DATABASE_URL=
+EMAIL_PASS=
+EMAIL_SERVICE=
+EMAIL_USER=
 GDRIVE_CLIENT_EMAIL=
 GDRIVE_CLIENTID=
 GDRIVE_PRIVTKEY=
