--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^6.3.0",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.19",
+    "nodemailer": "^6.9.14",
     "pnpm": "^9.4.0",
     "prisma": "^5.15.0",
     "react": "^18.2.0",
