--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "@chakra-ui/theme-tools": "^2.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.9.0",
+    "@mantine/core": "^7.10.2",
+    "@mantine/dropzone": "^7.10.2",
+    "axios": "^1.7.2",
     "framer-motion": "^6.3.0",
+    "gapi-script": "^1.2.0",
     "googleapis": "^140.0.0",
+    "mime": "^4.0.3",
     "net": "^1.0.2",
     "next": "^14.2.3",
     "react": "^18.2.0",
@@ -27,5 +32,8 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.2.3",
     "typescript": "^4.7.2"
-  }
+  },
+    "engines": {
+      "node": ">=18.0.0"
+    }
 }
