--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "prettier:check": "prettier --check .",
+    "prettier:fix": "prettier --write .",
     "migrate": "prisma migrate dev",
     "postmigrate": "npx @snaplet/seed sync"
   },
@@ -32,6 +35,7 @@
     "@types/react-dom": "^18.0.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.2.3",
+    "prettier": "^3.3.2",
     "prisma": "^5.15.1",
     "typescript": "^4.7.2"
   },
