--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,12 @@ POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
 POSTGRES_PORT=
+
 AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
 AUTH_SECRET=
+
+GDRIVE_CLIENT_EMAIL =
+GDRIVE_CLIENTID =
+GDRIVE_PRIVTKEY =
+GDRIVE_PROJECTID =
