--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postgres": "^3.4.4",
     "prisma": "^5.15.0",
     "react": "^18.2.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
