--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "format": "npm run prettier:fix && npm run lint:fix",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.2",
@@ -40,19 +40,12 @@
     "prettier": "^3.3.2",
     "typescript": "^4.9.5"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "npm run format",
-      "git add"
+      "npm run format"
     ],
     "schema.prisma": [
-      "npx prisma format",
-      "git add schema.prisma"
+      "npx prisma format"
     ]
   }
 }
