Rename Secrets (and update vault secrets)

--- a/.env.sample
+++ b/.env.sample
@@ -3,9 +3,9 @@ AUTH_GOOGLE_SECRET=
 AUTH_SECRET=
 DATABASE_URL=
 GDRIVE_CLIENT_EMAIL=
-GDRIVE_CLIENTID=
-GDRIVE_PRIVTKEY=
-GDRIVE_PROJECTID=
+GDRIVE_CLIENT_ID=
+GDRIVE_PRIVATE_KEY=
+GDRIVE_PROJECT_ID=
 POSTGRES_DATABASE=
 POSTGRES_PASSWORD=
 POSTGRES_PORT=
