--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Snaplet sync
+        run: npx @snaplet/seed sync
+
       - name: Build project
         run: npm run build
 
