Created ICS Branch.
Squashing :)

--- a/.env.sample
+++ b/.env.sample
@@ -2,11 +2,15 @@ AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
 AUTH_SECRET=
 DATABASE_URL=
+EMAIL_PASS=
+EMAIL_SERVICE=
+EMAIL_USER=
 GDRIVE_CLIENT_EMAIL=
-GDRIVE_CLIENTID=
-GDRIVE_PRIVTKEY=
-GDRIVE_PROJECTID=
+GDRIVE_CLIENT_ID=
+GDRIVE_PRIVATE_KEY=
+GDRIVE_PROJECT_ID=
 POSTGRES_DATABASE=
 POSTGRES_PASSWORD=
 POSTGRES_PORT=
+POSTGRES_URL_NON_POOLING=
 POSTGRES_USER=
