--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "prisma migrate dev && next dev",
+    "dev": "prisma generate && prisma migrate dev && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -9,9 +9,10 @@
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "format": "npm run prettier:fix && npm run lint:fix",
-    "prepare": "husky install",
+    "prepare": "husky",
     "migrate": "prisma migrate dev",
-    "postmigrate": "npx @snaplet/seed sync"
+    "postmigrate": "npx @snaplet/seed sync",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.2",
@@ -20,14 +21,17 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.9.0",
     "@faker-js/faker": "^8.4.1",
-    "@prisma/client": "^5.15.1",
+    "@prisma/client": "^5.17.0",
     "@snaplet/copycat": "^5.0.0",
     "@snaplet/seed": "^0.97.20",
+    "@vercel/postgres": "^0.9.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^6.3.0",
-    "ics": "^3.7.6",
+    "ics": "^3.8.1",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.19",
+    "nodemailer": "^6.9.14",
+    "pnpm": "^9.4.0",
     "postgres": "^3.4.4",
     "prisma": "^5.15.0",
     "react": "^18.2.0",
@@ -35,6 +39,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@snaplet/copycat": "^5.0.0",
+    "@snaplet/seed": "^0.97.20",
     "@types/node": "^18.19.34",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.0.0",
@@ -56,7 +62,8 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.6",
     "prettier": "^3.3.2",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "schema": "./prisma/schema.prisma"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
