--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,11 @@
   "extends": ["next", "next/core-web-vitals", "plugin:prettier/recommended"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   }
 }
