--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,15 @@ services:
     build: .
     ports:
       - '3000:3000'
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_HOST=db
-      - POSTGRES_DATABASE=${POSTGRES_DATABASE}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_PORT=${POSTGRES_PORT}
     depends_on:
       - db
     volumes:
       - .:/sistema
       - /sistema/node_modules
+    environment:
+      - NODE_ENV=development
+      - WATCHPACK_POLLING=true
+      - CHOKIDAR_USEPOLLING=true
   db:
     image: postgres:16-alpine
     ports:
