--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+      
+      - name: Docker compose
+        run: docker-compose up --build
 
       - name: Snaplet sync
         run: npx @snaplet/seed sync
