--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
         run: npm install
 
       - name: Snaplet sync
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: npx @snaplet/seed sync
 
       - name: Build project
