--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "vercel build": "prisma generate && prisma migrate dev && next build && prisma db seed",
+    "build": "prisma generate && prisma migrate dev && next build && prisma db seed",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint . --ext js,jsx,ts,tsx --fix",
