--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,16 @@
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
-POSTGRES_PORT=
-
 AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
 AUTH_SECRET=
-
-GDRIVE_CLIENTID =
-GDRIVE_CLIENT_EMAIL =
-GDRIVE_PRIVTKEY =
-GDRIVE_PROJECTID =
+EMAIL_PASS=
+EMAIL_SERVICE=
+EMAIL_USER=
+GDRIVE_CLIENT_EMAIL=
+GDRIVE_PROJECT_ID=
+GDRIVE_PRIVATE_KEY=
+GDRIVE_PROJECT_ID=
+POSTGRES_DATABASE=
+POSTGRES_PASSWORD=
+POSTGRES_PORT=
+POSTGRES_URL_NON_POOLING=
+POSTGRES_USER=
+VERCEL=
