Full calendar setup

--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.2",
-    "@chakra-ui/react": "^2.2.1",
+    "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/theme-tools": "^2.0.2",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.9.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "@prisma/client": "^5.15.0",
-    "framer-motion": "^6.3.0",
+    "framer-motion": "^6.5.1",
+    "fullcalendar": "^6.1.15",
+    "moment": "^2.30.1",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.19",
     "pnpm": "^9.4.0",
     "prisma": "^5.15.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.14.1",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0"
   },
