Rewrite to get rid of start.sh and addressed issues

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "prisma generate && prisma migrate dev && next dev",
+    "dev": "next dev",
     "build": "next build",
     "local build": "next build",
     "start": "next start",
