--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@chakra-ui/theme-tools": "^2.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.9.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.15.0",
     "framer-motion": "^6.3.0",
+    "google-auth-library": "^9.14.1",
     "next": "^14.2.13",
-    "next-auth": "^5.0.0-beta.19",
+    "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
     "pnpm": "^9.4.0",
-    "prisma": "^5.15.0",
+    "prisma": "^5.20.0",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0"
