--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "format": "npm run prettier:fix && npm run lint:fix",
-    "prepare": "husky"
+    "prepare": "husky",
+    "migrate": "prisma migrate dev",
+    "postmigrate": "npx @snaplet/seed sync",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.2",
@@ -17,29 +20,46 @@
     "@chakra-ui/theme-tools": "^2.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.9.0",
-    "@prisma/client": "^5.15.0",
+    "@faker-js/faker": "^8.4.1",
+    "@prisma/client": "^5.17.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^6.3.0",
     "next": "^14.2.13",
     "next-auth": "^5.0.0-beta.19",
     "nodemailer": "^6.9.14",
     "pnpm": "^9.4.0",
+    "postgres": "^3.4.4",
     "prisma": "^5.15.0",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@snaplet/copycat": "^5.0.0",
+    "@snaplet/seed": "^0.97.20",
     "@types/node": "^18.19.34",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.0.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "prettier": "^3.3.2",
+    "prisma": "^5.15.1"
+  },
+  "@snaplet/seed": {
+    "config": "prisma/seed/seed.config.ts"
+  },
+  "prisma": {
+    "seed": "npx tsx prisma/seed/seed.ts",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.6",
     "prettier": "^3.3.2",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "schema": "./prisma/schema.prisma"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
