--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@types/node": "^18.19.34",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
