--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - db
     volumes:
       - .:/sistema
+      - /sistema/node_modules
     environment:
       - NODE_ENV=development
       - WATCHPACK_POLLING=true
