--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "prisma": "^5.15.0",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@snaplet/copycat": "^5.0.0",
