--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/styled": "^11.9.0",
     "@faker-js/faker": "^8.4.1",
     "@prisma/client": "^5.17.0",
+    "@types/node-cron": "^3.0.11",
     "dotenv": "^16.4.5",
     "framer-motion": "^6.3.0",
     "next": "^14.2.13",
