--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "prisma": "^5.16.0",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
     "@snaplet/copycat": "^5.0.0",
