--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
+    "snaplet": "^0.42.1",
     "tsx": "^4.19.2"
   },
   "devDependencies": {
