Stuff is still not working but should be reviewed

--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@faker-js/faker": "^8.4.1",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@mui/material": "^5.15.20",
     "@mui/system": "^5.15.20",
     "@prisma/client": "^5.17.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^6.3.0",
-    "fullcalendar": "^6.1.15",
     "googleapis": "^140.0.1",
     "next": "^14.2.13",
     "next-auth": "^5.0.0-beta.19",
@@ -35,11 +37,7 @@
     "pnpm": "^9.4.0",
     "postgres": "^3.4.4",
     "prisma": "^5.16.0",
-    "react": "^18.2.0",
-    "react-calendar": "^5.0.0",
-    "react-dom": "^18.2.0",
-    "snaplet": "^0.42.1",
-    "tsx": "^4.19.2"
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@snaplet/copycat": "^5.0.0",
