--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - db
     volumes:
       - .:/sistema
+      - /sistema/node_modules
     environment:
       - NODE_ENV=development
       - WATCHPACK_POLLING=true
@@ -17,6 +18,12 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_PORT=${POSTGRES_PORT}
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DATABASE}
+    command: >
+      sh -c "npx prisma generate &&
+              npx prisma db push &&
+              npx @snaplet/seed sync &&
+              npx prisma db seed &&
+              npm run dev"
   db:
     image: postgres:16-alpine
     ports:
