David/gcal export (#19)
* Add Prisma and create Prisma models

* Add MailingList table

* Add seeding script commmand

* Add seeding script

* Add seeding script command in package.json

* Fix code formatting with prettier

* Fix prettier issues

* First Commit

* Added preliminary files

* Fixed Querying Prisma issue via troubleshooting docker

* Implemented ICS hosting Feature

* Tidied up code, ran lint and prettier

* Created ICS Branch.

Squashing :)

* Added necessary files

* Remove uneeded changes

* Remove uneeded changes

* Remove uneeded changes

* Update schema.prisma

* Remove unused variables

* Move seed.config.ts back

* Added ics

* Fixed Docker issues

* Testing commit

* Testing commit

* Testing commit

* Testing commit

* Fixed map issues

* Fixed map issues

* Testing

* Testing

* fixed lock file

* Update src/pages/ics.tsx

Co-authored-by: Chinemerem <chinemeremchigbo@Outlook.com>

* Commited some changes

* Update app/api/getAbsences/route.ts

Co-authored-by: Chinemerem <chinemeremchigbo@Outlook.com>

* Update app/api/getAbsences/route.ts

Co-authored-by: Chinemerem <chinemeremchigbo@Outlook.com>

* test

* Made changes based on CEO's instructions

* fixed merge issues

* Made Changes based on CEO's guidance

* teacher profile unstyled (#20)

* add unstyled teacher profile page with gauth info and x/10 absences

---------

Co-authored-by: Rahul Tandon <jesuisrahult@gmail.com>
Co-authored-by: David Lu <151972620+ludavidca@users.noreply.github.com>
Co-authored-by: Chinemerem <chinemeremchigbo@Outlook.com>

* Revert "teacher profile unstyled (#20)" (#37)

This reverts commit a81f4e1b7aaa375bcd40d84c033c9006913bce27. sorry

* Update utils/prisma.ts

Co-authored-by: Chinemerem <chinemeremchigbo@Outlook.com>

* Update src/pages/ics.tsx

Co-authored-by: Chinemerem <chinemeremchigbo@Outlook.com>

* Update app/api/getAbsences/route.ts

Co-aut

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@prisma/client": "^5.17.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^6.3.0",
+    "ics": "^3.8.1",
     "googleapis": "^140.0.1",
     "next": "^14.2.13",
     "next-auth": "^5.0.0-beta.25",
