--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@faker-js/faker": "^8.4.1",
+    "@fontsource/poppins": "^5.1.0",
     "@mui/material": "^5.15.20",
     "@mui/system": "^5.15.20",
     "@prisma/client": "^5.17.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^6.3.0",
-    "ics": "^3.8.1",
     "googleapis": "^140.0.1",
+    "ics": "^3.8.1",
+    "lucide-react": "^0.460.0",
     "next": "^14.2.13",
     "next-auth": "^5.0.0-beta.19",
     "nodemailer": "^6.9.14",
@@ -36,7 +38,8 @@
     "prisma": "^5.16.0",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@snaplet/copycat": "^5.0.0",
