--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@prisma/client": "^5.17.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^6.3.0",
-    "ics": "^3.8.1",
     "googleapis": "^140.0.1",
-    "next": "^14.2.22",
+    "ics": "^3.8.1",
+    "next": "^15.1.7",
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^6.9.14",
     "pnpm": "^9.15.0",
@@ -52,7 +52,7 @@
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
     "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^15.1.7",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
