--- a/package.json
+++ b/package.json
@@ -45,16 +45,17 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.20.0",
+    "@next/eslint-plugin-next": "^15.1.7",
     "@snaplet/copycat": "^5.0.0",
     "@snaplet/seed": "^0.97.20",
     "@types/node": "^18.19.34",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "eslint": "^9.20.1",
     "eslint-config-next": "^15.1.7",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-prettier": "^5.2.3",
     "husky": "^9.0.11",
     "prettier": "^3.3.2",
