--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,8 @@
     ],
     "strictNullChecks": true,
     "paths": {
-      // enables us to write `import X from "auth"` instead of `import X from "../../auth"`
       "auth": ["./auth"],
-      "@utils/prisma": ["./utils/prisma"]
+      "@utils/*": ["./utils/*"]
     }
   },
   "include": [
