--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -1,15 +1,15 @@
-name: Send Email reminders for missing lessons
+name: Send Email Reminders for Missing Lessons
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs every day at midnight UTC
+    - cron: "0 0 * * *" # Runs every day at 00:00 UTC
   workflow_dispatch:
 
 jobs:
   call-api:
     runs-on: ubuntu-latest
     steps:
-      - name: Call API
-        run: |
-          date # Add date logging
-          curl -X GET "https://sistema-prod.vercel.app/api/reminders"
+      - name: Log current time
+        run: date -u  # Logs the current UTC time
+      - name: Call reminders API
+        run: curl -X GET "https://sistema-prod.vercel.app/api/reminders"
