Add Database Docker URL

--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,7 @@ AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
 AUTH_SECRET=
 DATABASE_URL=
+DATABASE_URL_DOCKER=
 EMAIL_USER=
 GDRIVE_CLIENT_EMAIL=
 GDRIVE_PRIVATE_KEY=
@@ -9,7 +10,6 @@ GDRIVE_PROJECT_ID=
 GOOGLE_REFRESH_TOKEN=
 POSTGRES_DATABASE=
 POSTGRES_PASSWORD=
-POSTGRES_PORT=
 POSTGRES_USER=
 PROD_URL=
 SISTEMA_PASSWORD=
