--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,7 @@ services:
       - NODE_ENV=development
       - WATCHPACK_POLLING=true
       - CHOKIDAR_USEPOLLING=true
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_HOST=db
-      - POSTGRES_DATABASE=${POSTGRES_DATABASE}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_PORT=${POSTGRES_PORT}
-      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DATABASE}
+      - DATABASE_URL=${DATABASE_URL_DOCKER}
     command: >
       sh -c "npx prisma generate &&
               npx prisma db push &&
