--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "framer-motion": "^6.3.0",
     "googleapis": "^140.0.1",
     "ics": "^3.8.1",
+    "ionicons": "^7.4.0",
     "next": "^15.1.7",
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^6.9.14",
