--- a/.env.sample
+++ b/.env.sample
@@ -8,8 +8,8 @@ GDRIVE_CLIENT_EMAIL=
 GDRIVE_PRIVATE_KEY=
 GDRIVE_PROJECT_ID=
 GOOGLE_REFRESH_TOKEN=
+NEXT_PUBLIC_PROD_URL=
 POSTGRES_DATABASE=
 POSTGRES_PASSWORD=
 POSTGRES_USER=
-PROD_URL=
 SISTEMA_PASSWORD=
