--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -8,11 +8,10 @@ on:
 jobs:
   call-api:
     runs-on: ubuntu-latest
-    env:
-      NEXT_PUBLIC_PROD_URL: ${{ secrets.NEXT_PUBLIC_PROD_URL }}
     steps:
       - name: Log current time
         run: date -u # Logs the current UTC time
 
       - name: Call reminders API
-        run: curl -X GET "$NEXT_PUBLIC_PROD_URL/api/reminders"
+        run: curl -X GET "${{ secrets.NEXT_PUBLIC_PROD_URL }}/api/reminders"
+      
