--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.4.5",
     "framer-motion": "^6.3.0",
     "googleapis": "^140.0.1",
+    "iconsax-react": "^0.0.8",
     "ics": "^3.8.1",
     "ionicons": "^7.4.0",
     "next": "^15.1.7",
