--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
-    "recharts": "^2.15.1"
+    "recharts": "^3.0.0-alpha.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
