--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -2,7 +2,7 @@ name: Send Email Reminders for Missing Lessons
 
 on:
   schedule:
-    - cron: '*/2 * * * *'
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
