Add multiple allowed emails

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
+ALLOWED_EMAIL_DOMAINS=
 AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
 AUTH_SECRET=
@@ -13,5 +14,4 @@ POSTGRES_DATABASE=
 POSTGRES_PASSWORD=
 POSTGRES_USER=
 SISTEMA_PASSWORD=
-SISTEMA_EMAIL_DOMAIN=
 CRON_SECRET=
