--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "googleapis": "^140.0.1",
     "iconsax-react": "^0.0.8",
     "ics": "^3.8.1",
-    "next": "15.1.7",
-    "next-auth": "^5.0.0-beta.25",
-    "nodemailer": "^6.9.14",
+    "next": "15.5.7",
+    "next-auth": "5.0.0-beta.30",
+    "nodemailer": "^7.0.11",
     "pnpm": "^10.0.0",
     "postgres": "^3.4.4",
     "react": "^18.2.0",
